// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DeleteGroupedObjectButton behavior Click on button, conditional modal, should be displayed 1`] = `
<div
  aria-label="Delete item"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        Delete item
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      Are you sure you want to delete this item?
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton behavior Click on button, confirm modal, cancel 1`] = `
<div
  aria-label="Delete item"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        Delete item
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      Are you sure you want to delete this item?
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton behavior Click on button, confirm modal, confirm 1`] = `
<div
  aria-label="Delete item"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        Delete item
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      Are you sure you want to delete this item?
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton layout: Display is false Render widget 1`] = `<div />`;

exports[`DeleteGroupedObjectButton layout: Display with custom label Render widget 1`] = `
<div>
  <div
    class="center"
  >
    <button
      class="button red small"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-trash-can faIconLeft"
        data-icon="trash-can"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
          fill="currentColor"
        />
      </svg>
      Delete for unit test
    </button>
  </div>
</div>
`;

exports[`DeleteGroupedObjectButton layout: Display with default label Render widget 1`] = `
<div>
  <div
    class="center"
  >
    <button
      class="button red small"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-trash-can faIconLeft"
        data-icon="trash-can"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 96C14.3 96 0 81.7 0 64S14.3 32 32 32l96 0 7.2-14.3zM32 128l384 0 0 320c0 35.3-28.7 64-64 64L96 512c-35.3 0-64-28.7-64-64l0-320zm96 64c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16l0 224c0 8.8 7.2 16 16 16s16-7.2 16-16l0-224c0-8.8-7.2-16-16-16z"
          fill="currentColor"
        />
      </svg>
      myGroup.deleteThisGroupedObject
    </button>
  </div>
</div>
`;
